--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@mui/x-data-grid": "^5.17.2",
     "@mui/x-date-pickers": "^5.0.0-beta.7",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.2.1",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
@@ -46,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^29.0.3"
   }
 }
